# Quoridor_AI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
quoridor/src/: animated_board.py  board.py  game.py  player.py
quoridor/src/utils/: board_visualizer.py  types.py
tests/: test_board.py  test_game.py  test_player.py
