[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Quoridor_AI"
version = "0.1.0"
description = "Quoridor AI game"
authors = [
    { name = "Milica"}
]
dependencies = []
readme = "README.md"
license = { text = "MIT" }

# Python compatibility version (adjust as needed)
requires-python = ">=3.8"

[tool.setuptools]
packages = { find = { where = ["src"] } }